--- a/content/drafts/06.md
+++ b/content/drafts/06.md
@@ -1,8 +1,8 @@
 +++
 title           = "Comunicat"
 date	 	  	    = "2019-06-14"
-# nombrenoticies  = 1
-nombredestacats = 4
+nombrenoticies  = 1
+nombredestacats = 3
 key 		  	    = "JUNY019"
 
 [[relacionats]]
