Update and rename 06.md to 07.md

--- a/content/drafts/07.md
+++ b/content/drafts/07.md
@@ -2,8 +2,8 @@
 title           = "Comunicat"
 date	 	  	    = "2019-06-14"
 nombrenoticies  = 1
-nombredestacats = 3
-key 		  	    = "JUNY019"
+nombredestacats = 4
+key 		  	    = "JULIOL2019"
 
 [[relacionats]]
 doctitle          = "Traslladar info usuari entorn desenvolupament v2.4 a v3.0.0"
