--- a/content/comunicat/2019/12.md
+++ b/content/comunicat/2019/12.md
@@ -1,9 +1,9 @@
 +++
 title           = "Comunicat"
 date	 	  	    = "2019-12-10"
-nombrenoticies  = 1
-nombredestacats = 4
-key 		  	    = "DECEMBRE2019"
+nombrenoticies  = 5
+nombredestacats = 3
+key 		  	    = "DESEMBRE2019"
 
 [[relacionats]]
 doctitle          = "Comprovació automàtica de dependències vulnerables per aplicacions Canigó"
