--- a/content/comunicat/2019/12.md
+++ b/content/comunicat/2019/12.md
@@ -6,8 +6,20 @@ nombredestacats = 3
 key 		  	    = "DESEMBRE2019"
 
 [[relacionats]]
-doctitle          = "Comprovació automàtica de dependències vulnerables per aplicacions Canigó"
-docdescription    = "How-to per configurar i fer-ne ús del plugin dependency-check per trobar dependències vulnerables"
+doctitle          = "Canigo. Comprovació automàtica de dependències vulnerables per aplicacions Canigó"
+docdescription    = "How-to per configurar i fer-ne ús del plugin dependency-check per trobar dependències vulnerables."
 docurl            = "/howtos/2019-08-13-Howto-Dependency-check/"
+doctype           = "HTML"
+
+[[relacionats]]
+doctitle          = "SIC. Utilitzar Git-lfs per a arxius grans"
+docdescription    = "Howto per configurar i fer ús de l'extensió Git LFS per a poder incloure arxius grans."
+docurl            = "/howtos/2019-10-09-sic-Howto-Git-lfs/"
+doctype           = "HTML"
+
+[[relacionats]]
+doctitle          = "SIC. Configurar notificacions via email al Gitlab"
+docdescription    = "Howto per configurar l'enviament de correu electrònic per a conèixer l'activitat sobre els nostres projectes."
+docurl            = "/howtos/2019-10-09-sic-Howto-Gitlab-Mail/"
 doctype           = "HTML"
 +++
