--- a/content/comunicat/2019/12.md
+++ b/content/comunicat/2019/12.md
@@ -6,7 +6,7 @@ nombredestacats = 3
 key 		  	    = "DESEMBRE2019"
 
 [[relacionats]]
-doctitle          = "Canigo. Comprovació automàtica de dependències vulnerables per aplicacions Canigó"
+doctitle          = "Canigó. Comprovació automàtica de dependències vulnerables per aplicacions Canigó"
 docdescription    = "How-to per configurar i fer-ne ús del plugin dependency-check per trobar dependències vulnerables."
 docurl            = "/howtos/2019-08-13-Howto-Dependency-check/"
 doctype           = "HTML"
